broken style in editable elements fixed

--- a/public/stylesheets/pages/_hire_us.sass
+++ b/public/stylesheets/pages/_hire_us.sass
@@ -66,8 +66,9 @@
     position: relative
     text-align: center
     .caption
-      color: $light-blue
-      font-size: 17px
+      p
+        color: $light-blue
+        font-size: 17px
       position: relative
       bottom: -15px      
     img
@@ -76,11 +77,7 @@
       bottom: -25px
       
   .blue-plate
-    color: white
     border-radius: 3px
-    font-size: 21px
-    font-weight: 600
-    line-height: 30px
     background: $vivid-blue
     padding: 10px 7px
     margin-top: 5px
@@ -88,6 +85,12 @@
     a:hover
       color: inherit
       text-decoration: none
+    p
+      color: white
+      font-size: 21px
+      font-weight: 600
+      line-height: 30px
+      
   
   #form_wrap
     overflow: hidden
